<resources>
    <string name="app_name">FinalProApp</string>
    <string name="register">Register</string>
    <string name="register1">RegisterPage</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="this_is_the_main_page">THIS IS THE MAIN PAGE</string>
    <string name="enter_email">Enter Email</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="button">Button</string>
    <string name="enter_password">Password</string>
    <string name="logout">LogOut</string>
    <string name="signin">SignIn</string>
    <string name="setup_name">Name</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="request_fragment">Requests fragment</string>
    <string name="Setup_name">Name*</string>
    <string name="setup_save">Save Profile</string>
    <string name="search">Search</string>
    <string name="filter">Filter</string>
    <string name="item">Item</string>
    <string name="chats_frag">Chats Fragment</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="setup_lastname_">LastName*</string>
    <string name="user_interests">Interests here*</string>
    <string name="logOut">LogOut Successful</string>

    <!--  List of User Interest-->
    <string-array name="user_interest">
        <item>Sports</item>
        <item>Music</item>
        <item>Traveling</item>
        <item>Socializing</item>
        <item>Painting</item>
        <item>Dancing</item>
        <item>Books</item>
        <item>Computer</item>
        <item>Games</item>
        <item>Gardening</item>
        <item>Animals</item>
    </string-array>
    <string-array name="gender">
        <item>Male</item>
        <item>Female</item>
    </string-array>

    <!--Ages-->

    <string-array name="age_list">
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
        <item>31</item>
        <item>32</item>
        <item>33</item>
        <item>34</item>
        <item>35</item>
        <item>36</item>
        <item>37</item>
        <item>38</item>
        <item>39</item>
        <item>40</item>
        <item>41</item>
        <item>42</item>
        <item>43</item>
        <item>44</item>
        <item>45</item>
        <item>46</item>
        <item>47</item>
        <item>48</item>
        <item>49</item>
        <item>50</item>
        <item>51</item>
        <item>52</item>
        <item>53</item>
        <item>54</item>
        <item>55</item>
        <item>56</item>
        <item>57</item>
        <item>58</item>
        <item>59</item>
        <item>60</item>
        <item>61</item>
        <item>62</item>
        <item>63</item>
        <item>64</item>
        <item>65</item>
        <item>66</item>
        <item>67</item>
        <item>68</item>
        <item>69</item>
        <item>70</item>
        <item>71</item>
        <item>72</item>
        <item>73</item>
        <item>74</item>
        <item>75</item>
        <item>76</item>
        <item>77</item>
        <item>78</item>
        <item>79</item>
        <item>80</item>
        <item>81</item>
        <item>82</item>
        <item>83</item>
        <item>84</item>
        <item>85</item>
        <item>86</item>
        <item>87</item>
        <item>88</item>
        <item>89</item>
        <item>90</item>
        <item>91</item>
        <item>92</item>
        <item>93</item>
        <item>94</item>
        <item>95</item>
        <item>96</item>
        <item>97</item>
        <item>98</item>
        <item>99</item>
    </string-array>

</resources>
